The button now toggles the background color between lightblue and lightpink

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="Style.css">
     <title></title>
   </head>
-  <body>
+  <body class = "lb-background">
     <div>
       <button type="button" name="button" onclick="colorChanger()" id="colorChange">Change My Color!</button>
       <p>OwO</p>
